[gd_scene load_steps=39 format=3 uid="uid://bl2l6ub7boqo1"]

[ext_resource type="Script" uid="uid://bbi47iv854v4i" path="res://microgames/toast/main.gd" id="1_0eaa5"]
[ext_resource type="Texture2D" uid="uid://fwv60bcp5xxc" path="res://microgames/toast/toast.png" id="2_hn71x"]
[ext_resource type="Texture2D" uid="uid://duo87odxfb610" path="res://microgames/toast/background.png" id="2_k0wgn"]
[ext_resource type="Texture2D" uid="uid://cgobcw678muej" path="res://microgames/toast/toaster.png" id="3_gmsgr"]
[ext_resource type="Script" uid="uid://dvfxsux8ututp" path="res://microgames/toast/toaster.gd" id="4_gmsgr"]
[ext_resource type="Script" uid="uid://b3w63frn1pnge" path="res://microgames/toast/plate.gd" id="4_on76y"]
[ext_resource type="Texture2D" uid="uid://lcgeucf5fbvl" path="res://microgames/toast/spring_handle.png" id="5_fa81w"]
[ext_resource type="Texture2D" uid="uid://bjmsfsykvv8jv" path="res://microgames/toast/plate_with_toast.png" id="6_bps7a"]
[ext_resource type="Script" uid="uid://cy0pxkojg71cq" path="res://microgames/toast/toast.gd" id="6_sjrhx"]
[ext_resource type="Texture2D" uid="uid://ca8djrtauljyk" path="res://microgames/toast/speech_bubble.png" id="7_f60wu"]
[ext_resource type="Shader" uid="uid://nhp86rcfnvq5" path="res://microgames/toast/toast_shader.gdshader" id="7_okq5h"]
[ext_resource type="Texture2D" uid="uid://dvy08u5ji0bml" path="res://microgames/toast/toast_angry.png" id="8_k5ilc"]
[ext_resource type="Texture2D" uid="uid://bca5fpx5yrial" path="res://microgames/toast/toast_toasted.png" id="8_okq5h"]
[ext_resource type="Texture2D" uid="uid://2cm2iy3a37g0" path="res://microgames/toast/toast_dead.png" id="9_0eaa5"]
[ext_resource type="Texture2D" uid="uid://cfckigqn53jdo" path="res://microgames/toast/empty_plate.png" id="10_qrpjj"]
[ext_resource type="Script" uid="uid://wfyix4vqknse" path="res://microgames/toast/camera.gd" id="15_0eaa5"]

[sub_resource type="LabelSettings" id="LabelSettings_k5ilc"]
font_size = 41
outline_size = 27
outline_color = Color(0, 0.403922, 0.403922, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_f60wu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_on76y"]
size = Vector2(1029.98, 144.841)

[sub_resource type="Gradient" id="Gradient_on76y"]
offsets = PackedFloat32Array(0.868545, 1)
colors = PackedColorArray(0.66, 0.66, 0.66, 0.294118, 0.66, 0.66, 0.66, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bps7a"]
gradient = SubResource("Gradient_on76y")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="Curve" id="Curve_on76y"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_bps7a"]
curve = SubResource("Curve_on76y")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sjrhx"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 22.62
gravity = Vector3(0, -98, 0)
scale_min = 0.4
scale_max = 0.9
alpha_curve = SubResource("CurveTexture_bps7a")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aaj1h"]
shader = ExtResource("7_okq5h")
shader_parameter/toasted_texture = ExtResource("8_okq5h")
shader_parameter/angry_texture = ExtResource("8_k5ilc")
shader_parameter/dead_texture = ExtResource("9_0eaa5")
shader_parameter/toastedness = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0wgn"]
size = Vector2(914.286, 605.715)

[sub_resource type="Gradient" id="Gradient_k5ilc"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.164319, 0.446009, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.666635, 0.666635, 0.666635, 1, 0.335142, 0.335142, 0.335142, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0eaa5"]
gradient = SubResource("Gradient_k5ilc")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 1)

[sub_resource type="Gradient" id="Gradient_0eaa5"]
interpolation_mode = 2
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i4dx3"]
gradient = SubResource("Gradient_0eaa5")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 1)

[sub_resource type="Animation" id="Animation_0eaa5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WarnLight1:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WarnLight2:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_k5ilc"]
resource_name = "toaster_blink"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WarnLight1:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WarnLight2:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0eaa5"]
_data = {
&"RESET": SubResource("Animation_0eaa5"),
&"toaster_blink": SubResource("Animation_k5ilc")
}

[sub_resource type="Animation" id="Animation_n4ocr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HandWithPlate:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1129, 587)]
}

[sub_resource type="Animation" id="Animation_f60wu"]
resource_name = "intro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.366667, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.366667, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-125.2, 347.571), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_on76y"]
resource_name = "outro_win"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HandWithPlate:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(1129, 587), Vector2(1605, 587)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6eujq"]
_data = {
&"RESET": SubResource("Animation_n4ocr"),
&"intro": SubResource("Animation_f60wu"),
&"outro_win": SubResource("Animation_on76y")
}

[sub_resource type="LabelSettings" id="LabelSettings_on76y"]
font_color = Color(0, 0, 0, 0.282353)

[node name="Main" type="Node"]
script = ExtResource("1_0eaa5")
time = 12.0

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(580, 267)
scale = Vector2(0.452879, 0.398136)
texture = ExtResource("2_k0wgn")

[node name="ControlsLabel" type="Label" parent="."]
offset_left = 343.0
offset_top = 535.0
offset_right = 676.0
offset_bottom = 632.0
text = "Charge 
and Eject!"
label_settings = SubResource("LabelSettings_k5ilc")

[node name="SpeechBubble" type="Sprite2D" parent="."]
position = Vector2(1047, 231)
scale = Vector2(0.394942, 0.394942)
texture = ExtResource("7_f60wu")

[node name="SpeechBubbleLabel" type="RichTextLabel" parent="SpeechBubble"]
offset_left = -511.0
offset_top = -377.0
offset_right = 522.0
offset_bottom = 370.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 106
theme_override_font_sizes/bold_font_size = 180
bbcode_enabled = true
text = "I WANT TOAST!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Boundary" type="StaticBody2D" parent="."]
position = Vector2(189, 422)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Boundary"]
position = Vector2(391, 249)
shape = SubResource("WorldBoundaryShape2D_f60wu")

[node name="HandWithPlate" type="Sprite2D" parent="." node_paths=PackedStringArray("toast", "microgame_root")]
position = Vector2(1129, 587)
scale = Vector2(0.113, 0.113)
texture = ExtResource("10_qrpjj")
script = ExtResource("4_on76y")
plate_with_toast_texture = ExtResource("6_bps7a")
toast = NodePath("../Toast")
microgame_root = NodePath("..")

[node name="StaticBody2D" type="StaticBody2D" parent="HandWithPlate"]
position = Vector2(-1238.94, 44.2478)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HandWithPlate/StaticBody2D"]
polygon = PackedVector2Array(-772.486, -139.477, -820.767, -80.4673, -702.748, 32.187, -85.832, 118.019, 590.093, 59.0095, 804.673, -37.5513, 745.664, -193.121, 670.561, -171.663, 697.383, -64.3738, 354.056, 37.5515, -80.4673, 42.916, -643.739, -32.1868, -718.841, -96.5605, -702.748, -177.028)

[node name="PlateReachedArea" type="Area2D" parent="HandWithPlate"]
position = Vector2(-1247.79, 44.248)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandWithPlate/PlateReachedArea"]
position = Vector2(21.4579, -118.019)
shape = SubResource("RectangleShape2D_on76y")

[node name="Toast" type="RigidBody2D" parent="."]
position = Vector2(188.863, 423)
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 2
script = ExtResource("6_sjrhx")

[node name="Smoke" type="GPUParticles2D" parent="Toast"]
amount = 256
texture = SubResource("GradientTexture2D_bps7a")
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_sjrhx")

[node name="ToastSprite" type="Sprite2D" parent="Toast"]
material = SubResource("ShaderMaterial_aaj1h")
position = Vector2(0, 0.000244141)
scale = Vector2(0.102877, 0.102877)
texture = ExtResource("2_hn71x")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Toast"]
scale = Vector2(0.102877, 0.102877)
polygon = PackedVector2Array(-377.143, 382.857, 337.143, 382.857, 468.571, -222.857, 194.286, -371.428, -262.857, -365.714, -474.286, -222.857)

[node name="Toaster" type="AnimatableBody2D" parent="." node_paths=PackedStringArray("toast", "camera")]
position = Vector2(188.862, 586.286)
scale = Vector2(0.175, 0.175)
script = ExtResource("4_gmsgr")
toast = NodePath("../Toast")
camera = NodePath("../Camera2D")

[node name="ToastAnchor" type="Marker2D" parent="Toaster"]
position = Vector2(-39.2141, -115.919)
scale = Vector2(0.794709, 0.794709)

[node name="ToasterSprite" type="Sprite2D" parent="Toaster"]
scale = Vector2(0.794709, 0.794709)
texture = ExtResource("3_gmsgr")

[node name="SpringHandleAnchor" type="Node2D" parent="Toaster"]
position = Vector2(497.931, -167.349)
scale = Vector2(0.794709, 0.794709)

[node name="SpringHandle" type="Sprite2D" parent="Toaster/SpringHandleAnchor"]
texture = ExtResource("5_fa81w")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Toaster"]
scale = Vector2(0.704007, 0.551179)
polygon = PackedVector2Array(-690.64, -481.634, -673.497, 506.937, 646.503, 495.509, 675.074, -481.634, 543.646, -481.634, 526.503, 375.509, -547.783, 381.223, -593.497, -487.349)

[node name="ToastInsideCheckArea" type="Area2D" parent="Toaster"]
scale = Vector2(0.613062, -0.476826)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Toaster/ToastInsideCheckArea"]
position = Vector2(-33.4969, -30.2058)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_k0wgn")

[node name="WarnLight1" type="PointLight2D" parent="Toaster"]
position = Vector2(155.074, 175.508)
enabled = false
color = Color(0.89, 0.0979, 0.0979, 1)
energy = 3.52
texture = SubResource("GradientTexture2D_0eaa5")

[node name="WarnLight2" type="PointLight2D" parent="Toaster"]
position = Vector2(155.074, 175.508)
enabled = false
energy = 3.52
texture = SubResource("GradientTexture2D_i4dx3")
texture_scale = 2.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Toaster"]
libraries = {
&"": SubResource("AnimationLibrary_0eaa5")
}

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(14.7011, 0.876156)
anchor_mode = 0
zoom = Vector2(2, 2)
script = ExtResource("15_0eaa5")
decay_rate = 4.0
max_offset = Vector2(100, 100)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6eujq")
}

[node name="[INTERFACE]Obstacles" type="Node2D" parent="."]

[node name="CreditLabel" type="Label" parent="."]
offset_left = 14.0
offset_top = 14.0
offset_right = 316.0
offset_bottom = 83.0
text = "by Geometror"
label_settings = SubResource("LabelSettings_on76y")

[connection signal="body_entered" from="HandWithPlate/PlateReachedArea" to="HandWithPlate" method="_on_plate_reached_area_body_entered"]
[connection signal="body_entered" from="Toast" to="Toast" method="_on_body_entered"]
[connection signal="body_entered" from="Toaster/ToastInsideCheckArea" to="Toaster" method="_on_toast_inside_check_area_body_entered"]
[connection signal="body_exited" from="Toaster/ToastInsideCheckArea" to="Toaster" method="_on_toast_inside_check_area_body_exited"]
